# dc-cmake-example

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: github-actions.yml
src/app1/: CMakeLists.txt  main.cpp
